# Canvas-MCP

./: .augment-guidelines  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  AI_AGENT_README.md  ARCHITECTURE.md  CLAUDE.md  IMPROVEMENTS.md  INSTALL.md  README.md  TROUBLESHOOTING.md  TeamCharter.md  ai_coding_agent_setup.md  canvas_sync.py  check_syllabi.py  cleanup_db.py  codemcp.toml  init_db.py  lint.sh  project_details.md  pyproject.toml  pytest.ini  run_ruff.sh  run_server.sh  sync_data.sh  task.md  test.sh  test_canvas_api.py  test_canvas_client.py  test_direct.py  test_integration.py  test_query.py  test_syllabus.py  test_syllabus_handling.py  update_database_schema.py
.cursor/rules/: mcp_conceptual_overview.mdc  mcp_quickstart.mdc  overall-repo-rules.mdc
.github/workflows/: pr_agent.yml
archive/: check_syllabi.py  create_empty_syllabi.py  minimal_client.py  test_canvas_client_direct.py  test_integration.py  test_pdf_extraction.py  test_simple_canvas.py  test_syllabus_handling.py
archive/data/: integration_test.db  test_client.db
data/: canvas_mcp.db  integration_test.db  syllabus_test.db
docs/: INSTALL.md  db_schema.md  db_schema_updated.md  index.md  live_testing.md  refactoring_guide.md  sync_architecture.md
docs/canvas/: README.md
docs/canvas/reference/: account-ref.md  appointment-group-ref.md  assignment-ref.md  blueprint-ref.md  canvas-ref.md  class-reference.md  collaboration-ref.md  content-migration-ref.md  conversation-ref.md  current-user-ref.md  discussion-entry-ref.md  discussion-topic-ref.md  exceptions.md  external-tool-ref.md  file-ref.md  grade-change-log-ref.md  index.md  jwt-ref.md  keyword-args.md  lti-resource-link-ref.md  outcome-ref.md  page-ref.md  poll-choice-ref.md  poll-session-ref.md  poll-submission-ref.md  progress-ref.md  quiz-ref.md  rubric-ref.md  scope-ref.md  section-ref.md  sis-import-ref.md  submission-ref.md  upload-ref.md  util-ref.md
docs/mcp/: README.md
lessons/: mock_reduction_testing.md  pytest_refactoring.md  reducing_mock_reliance.md  sqlite_to_sqlalchemy_refactoring.md  unittest_to_pytest_refactoring.md
library_docs/canvas/reference/: account-calendar-ref.md  authentication-event-ref.md  authentication-provider-ref.md  avatar-ref.md  bookmark-ref.md  calendar-event-ref.md  canvas-object-ref.md  comm-message-ref.md  communication-channel-ref.md  content-export-ref.md  course-epub-export-ref.md  course-event-ref.md  course-ref.md  custom-gradebook-columns-ref.md  debugging.md  examples.md  (+25 more)
library_docs/markitdown/: README.md
library_docs/mcp/: conceptual_overview.md
scripts/: AI_AGENT_GUIDE.md  README.md  README_MCP_TESTER.md  check_database_integrity.py  check_database_relationships.py  direct_tools_test.py  extract_tools_test.py  extract_tools_test.py.new  generate_fixtures.py  organize_scripts.py  run_all_tests.py  run_direct_tools_test.sh  run_extract_tools_test.sh  run_tools_test.sh  test_direct.py  test_enrollment_states.py  test_error_handling.py  test_foreign_keys.py  test_full_sync_process.py  test_query.py  test_tools_integration.py
scripts/checks/: check_all_announcements.py  check_all_course_conversations.py  check_announcement_fields.py  check_announcements.py  check_announcements_vs_inbox.py  check_canvas_ids.py  check_canvas_notifications.py  check_discussions.py  check_ids385_communications.py  check_ids385_communications_conversations.py  check_instructor_messages.py  investigate_conversation_content.py  verify_conversation_content.py  verify_course_filter.py  verify_filtering.py
scripts/diagnostics/: check_database_relationships.py  run_all_tests.py  test_error_handling.py  test_full_sync_process.py  test_tools_comprehensive.py  test_tools_integration.py
scripts/fixes/: fix_conversation_content.py  fix_conversation_dates.py
scripts/legacy/: access_canvas_inbox.py  investigate_conversations.py  run_all_diagnostics.py  test_canvas_api.py  test_canvas_client.py  test_dropped_course.py  test_foreign_keys.py  test_mcp_tools.py  test_syllabus.py  test_term_filtering.py
scripts/utils/: clean_and_verify.py  update_database_schema.py
src/canvas_mcp/: __init__.py  __main__.py  canvas_api_adapter.py  canvas_client.py  config.py  database.py  init_db.py  models.py  server.py
tests/: README.md  conftest.py  generate_fixtures.py  init_db.py  mock_mcp.py  test_canvas_client.py  test_file_extractor.py  test_init_db.py  test_integration.py  test_refactored.sh  test_server.py
tests/fakes/: __init__.py  fake_canvasapi.py
tests/integration/: __init__.py  test_announcements.py  test_assignments.py  test_calendar.py  test_client.py  test_courses.py  test_files.py  test_integration.py  test_modules.py  test_search.py  test_syllabus.py  test_sync.py  tools_for_testing.py
tests/test_canvas/: conftest.py  test_canvas_client_integration.py  test_client.py  test_sync.py
tests/test_data/: test_canvas_mcp.db
tests/test_db/: test_init.py  test_init_db.py  test_models.py
tests/test_server/: __init__.py  conftest.py  test_content_endpoints.py  test_course_endpoints.py  test_routes.py  test_sync_endpoints.py  test_tools.py
tests/unit/: __init__.py  conftest.py  test_announcements_tool.py  test_assignments_tool.py  test_canvas_client.py  test_communications.py  test_communications_tool.py  test_courses_tool.py  test_files_tool.py  test_formatters.py  test_module_item_search.py  test_modules_tool.py  test_search_tool.py  test_syllabus_tool.py  test_sync_conversations.py  test_sync_tool.py
(+49 files in other folders)
