[project]
name = "canvas-mcp"
version = "0.1.0"
description = "MCP server for interacting with Canvas LMS"
readme = "README.md"
authors = [{ name = "Darin Kishore", email = "darinkishore@protonmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "canvasapi>=3.3.0",
    "mcp[cli]>=1.5.0",
    "mock>=5.2.0",
    "markitdown[all]",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.13.3",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "pydantic>=2.10.6",
    "sqlite-utils>=3.38",
]

[project.optional-dependencies]
dev = ["ruff", "pytest>=8.3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
only-packages = true

[tool.ruff]
src = ["src"]
target-version = "py312"
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501", "E402"]


# [tool.mypy]
# python_version = "3.12"
# strict = true
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# disallow_untyped_decorators = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_no_return = true
# warn_unreachable = true

[project.scripts]
canvas-mcp = "canvas_mcp.server:mcp.run"
